https://github.com/metadatacenter/cedar-project/issues/1198